--- a/rapid_response_kit/templates/broadcast.html
+++ b/rapid_response_kit/templates/broadcast.html
@@ -17,6 +17,9 @@
             {{ common.mms_media() }}
         </div>
         <div class="form-group">
+            <button type="button" class="sync" onclick="autofill_nums">Autofill attendee numbers</button>
+        </div>
+        <div class="form-group">
             <label for="numbers" class="control-label">Phone Numbers</label>
             <textarea id="numbers" name="numbers" class="form-control" rows="8" placeholder="Type or paste phone numbers on different lines."></textarea>
         </div>
