edit button name

--- a/rapid_response_kit/templates/broadcast.html
+++ b/rapid_response_kit/templates/broadcast.html
@@ -17,7 +17,7 @@
             {{ common.mms_media() }}
         </div>
         <div class="form-group">
-            <button type="button" class="sync" onclick="autofill_nums">Autofill attendee numbers</button>
+            <button type="button" class="sync" onclick="autofill_nums">Autofill attendee phone numbers</button>
         </div>
         <div class="form-group">
             <label for="numbers" class="control-label">Phone Numbers</label>
