--- a/rapid_response_kit/templates/home.html
+++ b/rapid_response_kit/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <h1>Twilio.org Rapid Response Kit</h1>
+    <h1>Hello</h1>
     <p>
         Welcome to Twilio.org Rapid Response Kit, powered by Twilio.org.
         Use the tools on the left, set up what you need in the case of an
